# dcs_server_manager

./: .gitignore  README.md  compile_exe.sh  dsm_diagram.drawio  dsm_hooks.lua  pyproject.toml  run.py
.github/workflows/: build_exe.yml
docs/: development.md
dsm/: config.py  dcs.py  exceptions.py  jobs.py  logs.py  processes.py  srs.py  web.py
static/: style.css
templates/: dcs_mission_status.html  dcs_pause_buttons.html  dcs_pending_orders.html  dsm_hooks.lua  files_list.html  global_status.html  home.html  hook_check.html  messages.html  server_config.html  server_config_form.html  server_manager_config_form.html  server_resources.html
